--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,8 @@
     ],
 	"require": {
 		"farafiri/PHP-parsing-tool": "dev-master"
-	}
+	},
+	"autoload": {
+        "psr-4": {"Sparql\\": "Sparql/"}
+    }
 }
